News UAT/force-app/main/default/objects/Question_Data__c/Question_Data__c.object-meta.xml
<CustomObject>
    <label>Question Data</label>
    <nameField>
        <displayFormat>QD-{0000}</displayFormat>
        <label>Question Data</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>