News UAT/force-app/main/default/objects/Question_Data__c/fields/Attempt__c.field-meta.xml
<CustomField>
    <fullName>Attempt__c</fullName>
    <label>Attempt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>