News UAT/force-app/main/default/objects/Question_Data__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Course Data</relationshipLabel>
    <relationshipName>Course_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>