News UAT/force-app/main/default/objects/Question_Data__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <label>Index</label>
    <length>255</length>
    <type>Text</type>
</CustomField>