News UAT/force-app/main/default/objects/Question_Data__c/fields/Question_ID__c.field-meta.xml
<CustomField>
    <fullName>Question_ID__c</fullName>
    <externalId>true</externalId>
    <label>Question ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>