News UAT/force-app/main/default/objects/Question_Data__c/fields/User_Answer__c.field-meta.xml
<CustomField>
    <fullName>User_Answer__c</fullName>
    <label>User Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>